[package]
name = "sawp-diameter"
version = "0.12.1"
authors = ["Canadian Centre for Cyber Security <sa-sawp@cyber.gc.ca>"]
description = "SAWP Protocol Parser for Diameter"
readme = "../README.md"
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/CybercentreCanada/sawp"
homepage = "https://github.com/CybercentreCanada/sawp"
keywords = ["diameter", "parser", "protocol", "mobility", "core-network"]
categories = ["parsing", "network-programming"]
include = [
    "Cargo.toml",
    "../LICENSE",
    "../README.md",
    "src/**/*.rs",
]

[features]
verbose = ["sawp/verbose"]

[dependencies]
sawp = { path = "..", version = "^0.12.1" }
nom = "7.1.3"
num_enum = "0.7.0"
bitflags = "~1.3.2"
num-traits = "0.2.17"
num-derive = "0.4.1"
bytestream = "0.4.1"
byteorder = "1.5.0"
once_cell = "1.18.0"
rand = "0.8.5"
lazy_static = "1.4.0"
rand_chacha = "0.3.1"

[dev-dependencies]
rstest = "0.18.1"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

# Override default replacements
[package.metadata.release]
pre-release-replacements = []
